[package]
name = "fragments"
version = "0.1.0"
edition = "2021"
license = 'BUSL-1.1'
authors = ['Fragcolor <https://github.com/fragcolor-xyz>']
description = "Fragments is a library for building and managing fragments assets."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-info = { version = "1.0", features = ["derive"] }
parity-scale-codec = { version = "2.3" }